--- a/testing stuff.ipynb
+++ b/testing stuff.ipynb
@@ -43,8 +43,8 @@
    },
    "outputs": [],
    "source": [
-    "train = pd.read_csv('product_attributes_update.csv', encoding='utf-8', \n",
-    "                    dialect='excel', lineterminator='\\n')#updated?\n",
+    "train = pd.read_csv('product_attributes_updated.csv', encoding='utf-8', \n",
+    "                    dialect='excel', lineterminator='\\n')\n",
     "train.tail(30)"
    ]
   },
