--- a/testing stuff.ipynb
+++ b/testing stuff.ipynb
@@ -875,7 +875,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(train)"
@@ -884,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "excess_columns=set([\"ProductID\",\"EID\",\"PID\",\"VID\",\"Department\",\"Product Title\",\"Category\"])\n",
@@ -916,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " def load_image( infilename ) :\n",
@@ -955,7 +961,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(y_train)==len(x_train)\n",
@@ -965,7 +973,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1040,10 +1050,10 @@
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5,seed=seed))\n",
     "model.add(Dense(5))\n",
-    "model.add(Activation('sigmoid'))\n",
+    "model.add(Activation('softmax'))\n",
     "\n",
     "#sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
-    "model.compile(loss='binary_crossentropy',\n",
+    "model.compile(loss='categorical_crossentropy',\n",
     "              optimizer='Adam',\n",
     "metrics=['accuracy'])"
    ]
@@ -1051,7 +1061,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1113,7 +1125,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1203,7 +1217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
