--- a/testing stuff.ipynb
+++ b/testing stuff.ipynb
@@ -875,7 +875,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(train)"
@@ -884,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "excess_columns=set([\"ProductID\",\"EID\",\"PID\",\"VID\",\"Department\",\"Product Title\",\"Category\"])\n",
@@ -916,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " def load_image( infilename ) :\n",
@@ -933,7 +939,7 @@
     "for row in train.itertuples():\n",
     "    if pd.notnull(row[11]):\n",
     "        try:\n",
-    "            img = load_image('..\\\\ml_150x150_m\\\\'+row[1]+'.jpg').reshape(150,150,1)\n",
+    "            img = load_image('..\\\\ml_150x150_m\\\\'+row[1]+'.jpg')\n",
     "        except IOError:\n",
     "            continue\n",
     "        x_train_list.append(img)\n",
@@ -955,7 +961,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(y_train)==len(x_train)\n",
