--- a/style_model.ipynb
+++ b/style_model.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from PIL import Image\n",
@@ -17,13 +19,12 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
-    "from keras.optimizers import SGD\n",
     "from keras import backend as K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -62,48 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Art Deco                        0\n",
-       "Art Glass                       0\n",
-       "Arts and Crafts / Craftsman     0\n",
-       "Asian                           0\n",
-       "Casual                          0\n",
-       "Classical                       0\n",
-       "Coastal                         0\n",
-       "Colonial / Williamsburg         0\n",
-       "Contemporary / Modern           0\n",
-       "Country / Cottage               0\n",
-       "Crystal                         0\n",
-       "Eclectic                        0\n",
-       "Kids Lighting                   0\n",
-       "Lodge / Rustic / Cabin          0\n",
-       "Marine / Nautical               0\n",
-       "Mission / Mackintosh            0\n",
-       "Old World                       0\n",
-       "Organic                         0\n",
-       "Schoolhouse                     0\n",
-       "Tiffany                         0\n",
-       "Traditional                     0\n",
-       "Transitional                    0\n",
-       "Tropical                        0\n",
-       "Victorian                       0\n",
-       "Vintage / Retro / Industrial    0\n",
-       "Id                              0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "one_hot1=pd.get_dummies(labels_df['Style1'])\n",
     "one_hot2=pd.get_dummies(labels_df['Style2'])\n",
@@ -115,27 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P1017767.jpg'\n",
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P1239025.jpg'\n",
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P252805.jpg'\n",
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P702584.jpg'\n",
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P702586.jpg'\n",
-      "[Errno 2] No such file or directory: 'E:\\\\ml_150x150\\\\P867134.jpg'\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     " def image2np_array( filename ) :\n",
     "    img = Image.open( filename )\n",
     "    img.load()\n",
-    "    data = np.asarray( img.getdata(), dtype='uint8' )\n",
+    "    data = np.asarray( img, dtype='uint8' )\n",
     "    return data\n",
     "x_train_list=[]\n",
     "y_train_list=[]\n",
@@ -144,9 +97,9 @@
     "\n",
     "\n",
     "for row in Style_labels.itertuples():\n",
-    "    if (row[27]!=0):\n",
+    "    if (row[27]!=0):#26=Id  27=sum\n",
     "        try:\n",
-    "            img = image2np_array('E:\\\\ml_150x150\\\\'+row[26]+'.jpg').reshape(150,150,3)\n",
+    "            img = image2np_array('..\\\\ml_150x150\\\\'+row[26]+'.jpg').reshape(150,150,3)#26=Id  27=sum\n",
     "        except (IOError, ValueError) as e:\n",
     "            print('{0}'.format(e))\n",
     "            continue\n",
@@ -156,20 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(33331, 150, 150, 3)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "x_train=np.array(x_train_list)\n",
     "y_train=np.array(y_train_list)\n",
@@ -178,21 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-3cd7dc11c340>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx_validation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m25000\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0my_validation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m25000\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m25000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m25000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x_train' is not defined"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "x_validation=x_train[25000:]\n",
     "y_validation=y_train[25000:]\n",
@@ -202,8 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "epochs = 30\n",
@@ -225,7 +161,7 @@
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(120))\n",
+    "model.add(Dense(80))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5,seed=seed))\n",
     "model.add(Dense(25))\n",
@@ -240,16 +176,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/30\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "train_datagen = ImageDataGenerator(\n",
     "    rescale=1. / 255,\n",
@@ -289,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
