--- a/style_model.ipynb
+++ b/style_model.ipynb
@@ -2,15 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-=======
-   "execution_count": 1,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -20,7 +15,6 @@
      ]
     }
    ],
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "source": [
     "from PIL import Image\n",
     "import pandas as pd\n",
@@ -33,12 +27,13 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
+    "from keras.optimizers import SGD\n",
     "from keras import backend as K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -106,15 +103,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-=======
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -153,7 +145,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "source": [
     "one_hot1=pd.get_dummies(labels_df['Style1'])\n",
     "one_hot2=pd.get_dummies(labels_df['Style2'])\n",
@@ -165,15 +156,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-=======
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -188,7 +174,6 @@
      ]
     }
    ],
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "source": [
     " def image2np_array( filename ) :\n",
     "    img = Image.open( filename )\n",
@@ -202,13 +187,9 @@
     "\n",
     "\n",
     "for row in Style_labels.itertuples():\n",
-    "    if (row[27]!=0):#26=Id  27=sum\n",
+    "    if (row[27]!=0):\n",
     "        try:\n",
-<<<<<<< HEAD
-    "            img = image2np_array('..\\\\ml_150x150\\\\'+row[26]+'.jpg').reshape(150,150,3)#26=Id  27=sum\n",
-=======
-    "            img = image2np_array('E:\\\\ml_150x150\\\\'+row[26]+'.jpg')\n",
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
+    "            img = image2np_array('..\\\\ml_150x150\\\\'+row[26]+'.jpg')\n",
     "        except (IOError, ValueError) as e:\n",
     "            print('{0}'.format(e))\n",
     "            continue\n",
@@ -218,15 +199,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-=======
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -239,7 +215,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "source": [
     "x_train=np.array(x_train_list)\n",
     "y_train=np.array(y_train_list)\n",
@@ -248,15 +223,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-=======
    "execution_count": 8,
-   "metadata": {},
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_validation=x_train[25000:]\n",
@@ -267,11 +237,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
    "execution_count": 9,
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "metadata": {
     "collapsed": true
    },
@@ -296,11 +262,7 @@
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
     "model.add(Flatten())\n",
-<<<<<<< HEAD
-    "model.add(Dense(80))\n",
-=======
     "model.add(Dense(70))\n",
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
     "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.5,seed=seed))\n",
     "model.add(Dense(25))\n",
@@ -314,15 +276,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-=======
-   "execution_count": 10,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -401,7 +358,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> 106961933c81d2de041d0e9ffc168094e893f818
    "source": [
     "train_datagen = ImageDataGenerator(\n",
     "    rescale=1. / 255,\n",
